# steam-game-idler

./: .env.example  .eslintrc.json  .gitattributes  .gitignore  .gitmodules  .npmrc  .prettierignore  Arabic.translation.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Chinese Simplified.translation.json  Czech.translation.json  Danish.translation.json  Dutch.translation.json  English.translation.json  Finnish.translation.json  French.translation.json  German.translation.json  Greek.translation.json  Italian.translation.json  Japanese.translation.json  LICENSE  Norwegian.translation.json  Polish.translation.json  Portuguese, Brazilian.translation.json  Portuguese.translation.json  README.md  Romanian.translation.json  Russian.translation.json  SECURITY.md  Spanish.translation.json  Swedish.translation.json  Turkish.translation.json  Ukrainian.translation.json  banner.json  changelog.md  crowdin.yml  eslint.config.mjs  eslint.config.ts  (+21 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  auto_assign.yml  crowdin.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.yml  issue_report.yml  question.yml
.github/scripts/: vt-scan.sh
.github/workflows/: codeql.yml  crowdin.yml  discord.yml  labeler-history.yml  labeler.yml  post-release.yml  process-issues.yml  pull_request.yml  release.yml  virustotal-rescan.yml  virustotal-scan.yml
.husky/: pre-commit
components/: Header.jsx
components/notifications/hooks/: useNotifications.js
components/notifications/utils/: notificationsHandler.js
components/settings/: Logs.jsx
docs/: .gitignore  CLAUDE.md  eslint.config.mjs  jsconfig.json  mdx-components.tsx  next-sitemap.config.js  next-sitemap.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  source.config.ts  tailwind.config.js  tailwind.config.mjs  tsconfig.json  vercel.json
docs/app/: _meta.global.ts  global.css  globals.css  layout.jsx  layout.tsx  manifest.ts  not-found.jsx  not-found.tsx  page.tsx  sitemap.ts
docs/app/(home)/: page.tsx  (+2 more)
docs/changelogs/: 2.3.0.mdx  2.3.1.mdx  2.3.11.mdx  2.3.12.mdx  2.3.2.mdx  2.3.5.mdx  2.5.19.mdx  2.5.2.mdx  2.5.21.mdx  2.5.22.mdx  2.5.23.mdx  2.5.4.mdx  2.5.5.mdx  2.5.6.mdx  2.5.8.mdx  2.5.9.mdx  4.0.4.mdx  4.0.7.mdx  5.0.10.mdx  5.0.12.mdx  5.0.14.mdx  5.0.2.mdx  5.0.5.mdx  5.0.6.mdx  5.1.0.mdx  5.1.1.mdx  5.3.1.mdx  5.3.10.mdx  5.3.2.mdx  5.3.3.mdx  5.3.4.mdx  5.3.5.mdx  5.3.6.mdx  5.3.7.mdx  5.3.8.mdx  5.3.9.mdx  5.4.0.mdx  5.4.1.mdx  5.4.2.mdx  5.4.3.mdx  (+14 more)
docs/lib/: layout.shared.tsx  source.ts
docs/public/: ads.txt  gridinsoft-gscfxup5u7j7ky1d4eeget7nya2frm5c335i2rsmnozkfs7xy77lmml9iu7nqin9.txt  og-image.psd  robots.txt  sitemap1.xml  sw.js
docs/src/: mdx-components.ts
libs/: .gitignore
libs/SteamUtility/: Program.cs  SteamUtility.csproj
libs/steam-utility/: FormIdler.Designer.cs  FormIdler.cs  Program.cs  SteamUtility.csproj
plugins/: DEVELOPMENT_GUIDE.md  README.md
plugins/example-plugin/: README.md  frontend.js  frontend.tsx  index.js  manifest.json  plugin.js
public/: ad-loader.html  loader.webm  logo.psd  server-side-games.json  webview.html
scripts/: build-libs.mjs  check-i18n.mjs  ensure-libs-built.mjs  strip-crowdin-empty-translations.mjs
src/: main.tsx
src-tauri/: .installed  Cargo.toml  LICENSE  THIRD-PARTY-NOTICES.md  build.rs  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/src/: achievement_manager.rs  async_utils.rs  automation.rs  credential_store.rs  crypto.rs  custom_lists.rs  discord_quests.rs  embedded_api_key.rs  error.rs  fs_utils.rs  game_data.rs  idling.rs  legacy_migration.rs  lib.rs  logging.rs  main.rs  platform.rs  plugins.rs  process_handler.rs  requests.rs  settings.rs  steam_api.rs  steam_utility_exe.rs  steam_web_api.rs  subscription.rs  tasks.rs  trading_cards.rs  tray.rs  updater.rs  user_data.rs  utils.rs  websocket.rs  zoom.rs
src-tauri/src/achievement_unlocker/: cache.rs  commands.rs  import_timings.rs  manager.rs  mod.rs  order.rs  settings.rs
src-tauri/src/achievements/: commands.rs  mod.rs  steam_language.rs  web_api.rs
src-tauri/src/auto_idle/: cache.rs  commands.rs  mod.rs
src-tauri/src/card_farming/: blacklist.rs  commands.rs  manager.rs  mod.rs  queue.rs  refund_window.rs  scraper.rs  settings.rs
src-tauri/src/customization/: commands.rs  mod.rs
src-tauri/src/debug/: commands.rs  mod.rs
src-tauri/src/favorites/: cache.rs  commands.rs  mod.rs
src-tauri/src/free_games/: commands.rs  discovery.rs  mod.rs  settings.rs
src-tauri/src/games/: cache.rs  commands.rs  merge.rs  mod.rs  web_api.rs
src-tauri/src/idling/: auto_stop.rs  claims.rs  commands.rs  manager.rs  mod.rs  settings.rs
src-tauri/src/inventory/: cache.rs  commands.rs  market.rs  mod.rs  scraper.rs  settings.rs
src-tauri/src/local_steam/: achievements.rs  commands.rs  free_game_claim.rs  mod.rs  ownership.rs  steam_web_api.rs  vdf.rs
src-tauri/src/max_playtime/: commands.rs  enforcement.rs  mod.rs  settings.rs
src-tauri/src/settings/: commands.rs  mod.rs
src-tauri/src/steam_agent/: commands.rs  ipc.rs  manager.rs  mod.rs  ownership_settings.rs  presence_settings.rs  process.rs
src-tauri/src/steam_community/: commands.rs  credentials.rs  mod.rs  session.rs
src/@types/: global.d.ts  i18next.d.ts  settings.ts  window.d.ts
src/app/: App.tsx  bootstrap.ts
src/i18n/: i18n.js  i18n.ts  index.ts
src/pages/: _app.jsx  _app.tsx  _document.tsx  dashboard.tsx  index.jsx  index.tsx  layout.tsx
src/shared/: constants.ts
src/stores/: idleStore.ts  navigationStore.ts  searchStore.ts  stateStore.ts  supabaseStore.ts  updateStore.ts  userStore.ts
src/styles/: ChangelogModal.module.css  ChatBox.module.css  globals.css  theme.css
src/types/: achievment.ts  game.ts  index.ts  invoke.ts  log.ts  navigation.ts  plugin.ts  quests.ts  settings.ts  sort.ts  tradingcard.ts  update.ts  user.ts
src/utils/: achievements.js  achievements.ts  automation.js  automation.ts  idle.js  idle.ts  myAppHandler.js  plugin-registry.ts  supabaseClient.ts  tasks.js  tasks.ts  toasts.js  toasts.tsx  utils.js
(+1687 files in other folders)
