[package]
name = "steam-game-idler"
version = "6.0.0"
authors = ["zevnda"]
license = "Elastic-2.0"
repository = "https://github.com/zevnda/steam-game-idler"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "steam_game_idler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.8.0", features = ["unstable", "tray-icon", "image-png"] }
tokio = { version = "1", features = ["process", "io-util", "sync", "time", "rt", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
keyring = { version = "4.1.4", default-features = false, features = ["v1", "windows-native-keyring-store"] }
steamlocate = "2.0.1"
regex = { version = "1.11.1", default-features = false, features = ["std"] }
reqwest = { version = "0.12.12", features = ["json", "gzip", "brotli", "deflate"] }
sysinfo = "0.36.0"
scraper = "0.23"
machine-uid = "0.5"
futures = "0.3"
rand = "0.8"
chrono = "0.4"
urlencoding = "2.1.3"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2.7"

[features]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = { git = "https://github.com/zevnda/plugins-workspace-custom" }
tauri-plugin-updater = "2.9.0"
tauri-plugin-process = "2.3.0"
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-autostart = "2.5.0"
tauri-plugin-notification = "2.3.0"
tauri-plugin-clipboard-manager = "2.3.2"

[profile.dev]
opt-level = 1
incremental = true
debug = 1
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
overflow-checks = false
